# ostracode

./: .env.example  Cargo.toml
.github/: dependabot.yml
src/: lib.rs  main.rs
src/config/: db_initializers.rs  environment.rs  mod.rs  routes.rs
