[package]
name = "ostracode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
